<resources>
    <string name="app_name">Lets Get Drunk</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="move_to_register">Don\'t have an account? Click to register</string>
    <string name="move_to_login">Already have an account? Click here to sign in</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_event">Parties</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">Make a Party!!!</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
</resources>
